Revision history for Perl extension threads::shared.

1.28 Mon Feb 23 18:46:19 2009
	- Correct POD wrt lock()
	- Clarify is_shared($hash{'elem'}) in POD
	- Upgraded ppport.h to Devel::PPPort 3.16

1.27 Tue Nov 25 16:47:48 2008
	- Require a minimum version of 'threads'
	- Documented each(%{$foo{'bar'}}) bug
	- Simplified loading modules in tests
	- Upgraded ppport.h to Devel::PPPort 3.14_03

1.26 Wed Jul 16 13:45:44 2008
	- Conditionalize read-only tests for Perl < 5.8.3

1.25 Fri Jul 11 17:04:47 2008
	- Fix to shared_clone() for read-only objects

1.24 Mon Jul  7 17:34:37 2008
	- Support utf8 hash keys (bug #37149)
	- Use standardized watchdog/timeout code in tests

1.23 Tue Jun 17 20:26:13 2008
	- Rewrite of timer process in tests

1.22 Tue Jun 10 17:15:36 2008
	- Upgraded ppport.h to Devel::PPPort 3.14
	- LICENSE section in POD
	- End all tests with exit(0)

1.21 Wed May 14 15:15:44 2008
	- Added shared_clone()
	- Fixed is_shared($x->{elem}) and the like
	- Upgraded ppport.h to Devel::PPPort 3.13_03

1.19 Wed May  7 17:56:26 2008
	- Fixed return value of ref() on refs of refs
	- Document using is_shared() vs. refaddr() on shared refs
	- Don't fail t/stress.t if ENOMEM on thread creations

1.18 Tue Feb 26 16:21:55 2008
	- Stress test diagnostics
	- 'die' properly if no compiler

1.17 Fri Feb 22 21:28:52 2008
	- Allow installation on non-threaded Perls

1.16 Wed Feb 20 17:15:44 2008
	- Blead change 33256
	- Upgraded ppport.h to Devel::PPPort 3.13_01

1.15 Tue Nov  6 17:20:10 2007
	- For Perl 5.10.0 and later, fixed problem with storing shared
	    objects in shared structures
	- Upgraded ppport.h to Devel::PPPort 3.13

1.14 Thu Sep 20 14:29:36 2007
	- Upgraded ppport.h to Devel::PPPort 3.11_06
	- Fixed ppport.h warnings

1.13 Wed Sep  5 13:40:50 2007
	- POD spelling test (maintainer only)

1.12 Wed May 23 09:21:35 EDT 2007
	- Fixed 'Confused test output' problems with tests
	- Skip stress test under HP-UX 10.20

1.11 Mon May 14 12:13:37 2007