@@ -1,12 +1,14 @@
 --- #YAML:1.0
 name:               threads-shared
-version:            1.28
+version:            1.29
 abstract:           Perl extension for sharing data structures between threads
 author:
     - Artur Bergman, Jerry D. Hedden <jdhedden AT cpan DOT org>
 license:            perl
 distribution_type:  module
 configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
     ExtUtils::MakeMaker:  0
 requires:
     Carp:               0
@@ -16,14 +18,14 @@ requires:
     strict:             0
     Test:               0
     Test::More:         0
-    threads:            1.71
+    threads:            1.73
     warnings:           0
     XSLoader:           0
 no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.48
+generated_by:       ExtUtils::MakeMaker version 6.53_02
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
